push jSparrow app change